--- a/src/components/general/styles/ConfirmDialog.css
+++ b/src/components/general/styles/ConfirmDialog.css
@@ -1,29 +1,32 @@
 .MuiPaper-root.MuiDialog-paper.makeStyles-dialog-3.MuiDialog-paperScrollPaper.MuiDialog-paperWidthSm.MuiPaper-elevation24.MuiPaper-rounded {
-    text-align: center;
+	text-align: center;
+	height: 425px;
 }
 
-.MuiDialogTitle-root.makeStyles-dialogTitle-4.Dialog-Error button.MuiButtonBase-root.MuiIconButton-root.makeStyles-titleIcon-7 {
-    background-color: var(--danger-color);
+.MuiDialogTitle-root.makeStyles-dialogTitle-4.Dialog-Error
+	button.MuiButtonBase-root.MuiIconButton-root.makeStyles-titleIcon-7 {
+	background-color: var(--danger-color);
 }
 
-.MuiDialogTitle-root.makeStyles-dialogTitle-4.Dialog-Success button.MuiButtonBase-root.MuiIconButton-root.makeStyles-titleIcon-7 {
-    background-color: var(--primary-color);
+.MuiDialogTitle-root.makeStyles-dialogTitle-4.Dialog-Success
+	button.MuiButtonBase-root.MuiIconButton-root.makeStyles-titleIcon-7 {
+	background-color: var(--primary-color);
 }
 
 button.MuiButtonBase-root.MuiButton-root.makeStyles-root-9.MuiButton-contained.MuiButton-containedSizeLarge.MuiButton-sizeLarge:first-of-type {
-    border: 1px solid var(--primary-color);
-    background-color: var(--bg-color);
-    color: var(--primary-color);
+	border: 1px solid var(--primary-color);
+	background-color: var(--bg-color);
+	color: var(--primary-color);
 }
 
 button.MuiButtonBase-root.MuiButton-root.makeStyles-root-9.MuiButton-contained.MuiButton-containedSizeLarge.MuiButton-sizeLarge:last-of-type.Dialog-Error {
-    border: 1px solid var(--danger-color);
-    background-color: var(--danger-color);
-    color: var(--bg-color);
+	border: 1px solid var(--danger-color);
+	background-color: var(--danger-color);
+	color: var(--bg-color);
 }
 
 button.MuiButtonBase-root.MuiButton-root.makeStyles-root-9.MuiButton-contained.MuiButton-containedSizeLarge.MuiButton-sizeLarge:last-of-type.Dialog-Success {
-    border: 1px solid var(--primary-color);
-    background-color: var(--primary-color);
-    color: var(--bg-color);
+	border: 1px solid var(--primary-color);
+	background-color: var(--primary-color);
+	color: var(--bg-color);
 }
