--- a/src/pages/Feed/Feed.css
+++ b/src/pages/Feed/Feed.css
@@ -182,3 +182,10 @@
 	fill: var(--danger-color);
 	color: var(--danger-color);
 }
+
+.MuiDialogActions-root.makeStyles-dialogAction-6.MuiDialogActions-spacing
+	> button.MuiButtonBase-root.MuiButton-root.makeStyles-root-13.MuiButton-contained.MuiButton-containedSizeLarge.MuiButton-sizeLarge {
+	border: 1px solid var(--primary-color);
+	background-color: var(--bg-color);
+	color: var(--primary-color);
+}
